Structure and design
-Adding the basics components and resources
-import temp Assets for testing
-Including CSS scripts for animations
-Using background music sample
-Using JS to control volume

--- a/WEBVR/src/app/app.component.css
+++ b/WEBVR/src/app/app.component.css
@@ -1,18 +1,21 @@
 
+.column{
+  height: 63%;
+  display: inline-block;
+  margin: 0 auto -50px;
+  margin-top: 10px;
+}
 
-.test {
-    display: inline-block;
-    scroll-behavior: inherit;
-    
+.row{
+  padding: 40px;
 }
 
 .card {
-    width: 200px;
-    height: auto;
-    margin: 20px;
-    position: relative;
-    border: 1px;
+  width: 200px;
+  margin: 0, auto;
 }
+
+
 
 /* Float */
 .float {
