--- a/WEBVR/src/app/app.component.html
+++ b/WEBVR/src/app/app.component.html
@@ -1,19 +1,25 @@
-<div class="test" *ngFor="let space of spaces">
-  <mat-card class="card float">
-    <mat-card-header>
-      <img mat-card-avatar src={{space.icon}}>
-      <mat-card-title>{{space.name}}</mat-card-title>
-      <mat-card-subtitle>{{space.assigment}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src= {{space.image}} alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        {{space.description}}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
+<app-top-bar></app-top-bar>
+
+<div class="column" *ngFor="let space of spaces">
+  <div class="row">
+    <mat-card class="card float">
+      <mat-card-header>
+        <img mat-card-avatar src={{space.icon}}>
+        <mat-card-title>{{space.name}}</mat-card-title>
+        <mat-card-subtitle>{{space.assigment}}</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src= {{space.image}} alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          {{space.description}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>Entrar</button>
+        <button mat-button>Crear</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
+
+<app-footer></app-footer>
