--- a/WEBVR/src/app/app.component.html
+++ b/WEBVR/src/app/app.component.html
@@ -1,15 +1,48 @@
 <app-top-bar></app-top-bar>
 
-<div class="column" *ngFor="let space of spaces">
-  <div class="row">
-    <mat-card class="card float">
+
+<swiper [config]= "config">
+  
+  <div class="swiper-wrapper">
+    <div class="swiper-slide" *ngFor="let space of spaces">
+      <mat-card class="card">
+        <mat-card-header>
+          <img mat-card-avatar src={{space.icon}}>
+          <mat-card-title>{{space.name}}</mat-card-title>
+          <mat-card-subtitle>{{space.assigment}}</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src= {{space.image}} alt="cover" class="image">
+        <mat-card-content class="content">
+          <p>
+            {{space.description}}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>Entrar</button>
+          <button mat-button>Crear</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+
+
+
+  </div>
+  
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+</swiper>
+
+<!--
+<div class="swiper-conatiner">
+  <div class="swiper-wrapper" >
+    <mat-card class="float card" *ngFor="let space of spaces">
       <mat-card-header>
         <img mat-card-avatar src={{space.icon}}>
         <mat-card-title>{{space.name}}</mat-card-title>
         <mat-card-subtitle>{{space.assigment}}</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src= {{space.image}} alt="Photo of a Shiba Inu">
-      <mat-card-content>
+      <img mat-card-image src= {{space.image}} alt="cover" class="image">
+      <mat-card-content class="content">
         <p>
           {{space.description}}
         </p>
@@ -20,6 +53,6 @@
       </mat-card-actions>
     </mat-card>
   </div>
-</div>
-
+  </div>
+-->
 <app-footer></app-footer>
