adding routing for components and fixing responsive issues

--- a/WEBVR/src/app/top-bar/top-bar.component.html
+++ b/WEBVR/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,6 @@
-<mat-toolbar  color="primary" class="top-bar">
-    <mat-toolbar-row>
-    <span><img id="logo" src="assets/frame.png"></span>
-    <span><img src="assets/letters.png" alt="TEC" class="header"></span>    
-    <span class="spacer "></span>
-    <span><button mat-fab color="accent" class="mute" onclick="mute()" ><mat-icon  ara-label="Mute">volume_off</mat-icon></button></span>
-</mat-toolbar-row>
+<mat-toolbar class="top-bar">
+    <mat-toolbar-row >
+        <span ><img class="logo" src="/assets/logo.svg" alt=""></span>
+    </mat-toolbar-row>
+</mat-toolbar>
   
