--- a/WEBVR/src/app/footer/footer.component.css
+++ b/WEBVR/src/app/footer/footer.component.css
@@ -1,27 +1,19 @@
 .footer{
     height: auto;
-    
+    padding-top: 3%;
+    padding-bottom: 3%;
+    background-color: #06207C;
+    text-align: center;
+    color: #FFFF;
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0;
+    z-index: 1;
 }
 
-
-.grid {
-    width: 100%;
-    height: 20%;
-    background: url("/assets/bg.jpg");
-    background-repeat: repeat-x;
-    background-position: center center;
-    background-size: initial;
-    background-attachment: initial;
-    animation: grid 100s linear infinite;
-  
- }
-
- @keyframes grid {
-    from {
-      background-position: -10000px  0px;
-    }
-  
-    to {
-      background-position: 0 0;
-    }
-  }
+.tec{
+  position: sticky;
+  bottom: 0;
+  max-width: 15%;
+  height: auto;
+}
