--- a/WEBVR/src/app/footer/footer.component.html
+++ b/WEBVR/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
-<div class="grid footer"></div>
+<div class="footer">
+    <span><img src="./assets/Teclogo.svg" alt="" class="tec"></span>
+</div>
  
 
