--- a/WEBVR/src/app/top-bar/top-bar.component.css
+++ b/WEBVR/src/app/top-bar/top-bar.component.css
@@ -1,40 +1,25 @@
-.top-bar{
+.top-bar {
   width: 100%;
-  padding-top: 4%;
-  padding-left: 2%;
-  height: 200px;
+  height: 20%;
+  background-color: inherit;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
+.top-bar::after {
+  background: inherit; 
+  position: absolute;
 }
 
-.spacer{
+.logo {
+  position:relative;
+  max-width: 100%;
+  max-height: 100%;
+  padding-top: 50%;
+  padding-left: 25%;
+  padding-right: 25%;
+}
+
+.space{
   flex: 1 1 auto;
 }
-
-.mute{
-  margin-top: 180px;
-}
-
-.mute:hover{
-  background-color: aqua;
-}
-
-.header{
-  width: 50%;
-}
-
-
-
-
-
-#logo{
-    -webkit-animation: rotation 20s infinite linear;
-  }
-  
-  @-webkit-keyframes rotation {
-    from{
-      -webkit-transform: rotate(0deg);
-    }
-    to{
-      -webkit-transform: rotate(359deg);
-    }
-  }
-  
