--- a/WEBVR/src/styles.css
+++ b/WEBVR/src/styles.css
@@ -1,8 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; margin: 0; }
+html, body { height: 100%; margin: 0; overflow: hidden;  font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #02000D;}
 
-body { 
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: #02000D;
- }
