--- a/WEBVR/src/app/footer/footer.component.html
+++ b/WEBVR/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer" id="hide">
     <span><img src="./assets/Teclogo.svg" alt="" class="tec"></span>
 </div>
  
