--- a/WEBVR/src/app/home/home.component.html
+++ b/WEBVR/src/app/home/home.component.html
@@ -1,27 +1,25 @@
 <div class="content">
-    <swiper [config]= "config">
+    <swiper [config]= "config" >
       <div class="swiper-wrapper">
         <div class="swiper-slide" *ngFor="let space of spaces">
-          <mat-card class="card">
+          <mat-card class="card" id="smartphone">
             <mat-card-header>
               <img mat-card-avatar src={{space.icon}}>
-              <mat-card-title>{{space.name}}</mat-card-title>
-              <mat-card-subtitle style="color: #ffff;">{{space.assigment}}</mat-card-subtitle>
+              <mat-card-title class="title">{{space.name}}</mat-card-title>
+              <mat-card-subtitle style="color: #ffff;" class="subtitle"> M.I.R.V</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src= {{space.image}} alt="cover" class="image">
-            <mat-card-content>
-              <p>
+            <img mat-card-image src= {{space.image}} alt="cover" class="image" id="image">
+            <mat-card-content >
+              <p class="text" id="hide" >
                 {{space.description}}
               </p>
             </mat-card-content>
             <mat-card-actions>
-              <button mat-button>Entrar</button>
-              <button mat-button>Crear</button>
+              <a href={{space.join}} target="_blank"><button mat-button color="primary">Entrar</button></a> 
+              <a href={{space.create}} target="_blank"><button mat-button color="primary">Crear</button></a> 
             </mat-card-actions>
           </mat-card>
         </div>
       </div>
-    
-      
     </swiper>
     </div>
