--- a/WEBVR/src/app/top-bar/top-bar.component.css
+++ b/WEBVR/src/app/top-bar/top-bar.component.css
@@ -1,6 +1,6 @@
 .top-bar {
   width: 100%;
-  height: 20%;
+  height: auto;
   background-color: inherit;
   position: sticky;
   position: -webkit-sticky;
@@ -13,13 +13,17 @@
 
 .logo {
   position:relative;
-  max-width: 100%;
-  max-height: 100%;
-  padding-top: 50%;
-  padding-left: 25%;
-  padding-right: 25%;
+  max-width: 80%;
+  height: auto;
+  padding-top: 25%;
+  padding-left: 30%;
+  padding-right: 30%;
 }
 
 .space{
   flex: 1 1 auto;
+}
+
+@media screen and (width: 812px){
+  .logo{width: 40%; padding-top: 10%;}
 }
