--- a/WEBVR/src/app/top-bar/top-bar.component.html
+++ b/WEBVR/src/app/top-bar/top-bar.component.html
@@ -1,6 +1,4 @@
-<mat-toolbar class="top-bar">
-    <mat-toolbar-row >
-        <span ><img class="logo" src="/assets/logo.svg" alt=""></span>
-    </mat-toolbar-row>
-</mat-toolbar>
+<div class="top-bar">
+    <img class="logo" src="/assets/logo.svg" alt="">
+</div>
   
