--- a/WEBVR/src/app/top-bar/top-bar.component.css
+++ b/WEBVR/src/app/top-bar/top-bar.component.css
@@ -1,6 +1,9 @@
 .top-bar {
   width: 100%;
-  height: auto;
+  padding-top: 1rem;
+  height: 100px;
+  display: flex;
+  justify-content: space-around;
   background-color: inherit;
   position: sticky;
   position: -webkit-sticky;
@@ -12,12 +15,8 @@
 }
 
 .logo {
-  position:relative;
-  max-width: 80%;
+  width: 50%;
   height: auto;
-  padding-top: 25%;
-  padding-left: 30%;
-  padding-right: 30%;
 }
 
 .space{
@@ -25,5 +24,6 @@
 }
 
 @media screen and (width: 812px){
-  .logo{width: 40%; padding-top: 10%;}
+  .logo{width: 16%;}
+  .top-bar{padding-top: 0;}
 }
