Fixing responsive Issues

--- a/WEBVR/src/app/footer/footer.component.css
+++ b/WEBVR/src/app/footer/footer.component.css
@@ -1,15 +1,11 @@
 
 .footer{
-    margin-top: 180px;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
+    width: 100%;
+    margin: 0 auto;
     text-align: center;
     color: #FFFF;
-    position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
     bottom: 0;
-    z-index: 1;
     -webkit-animation: color-change-2x 20s linear infinite alternate both;
     animation: color-change-2x 4s linear infinite alternate both;
 }
@@ -34,8 +30,8 @@
 }
 
 .tec{
-  padding: 1rem;
-  width: 50%;
+  padding: 10px;
+  width: 200px;
   height: auto;
 }
 
