--- a/WEBVR/src/app/home/home.component.html
+++ b/WEBVR/src/app/home/home.component.html
@@ -8,7 +8,7 @@
               <mat-card-title class="title">{{space.name}}</mat-card-title>
               <mat-card-subtitle style="color: #ffff;" class="subtitle"> M.I.R.V</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src= {{space.image}} alt="cover" class="image" id="image">
+            <img mat-card-image src= {{space.image}} alt="cover" class="image" id="hide">
             <mat-card-content >
               <p class="text" id="hide" >
                 {{space.description}}
