--- a/WEBVR/src/app/home/home.component.css
+++ b/WEBVR/src/app/home/home.component.css
@@ -1,17 +1,17 @@
 .content{
-  max-width: 100%;
-  height: 85%;
-  z-index: 1;
+  width: 100%;
+  height: auto;
 }
 
 .swiper-wrapper{
-    margin-top: 5%;
-    height: 80%;
-    margin-bottom: 5%;
+    width: 100%;
+    height: 100%;
   }
   
   .card{
-    margin-top: 15%;
+    max-width: 360px;
+    height: auto;
+    margin-top: 10%;
     background: inherit;
     background-color: #131415;
     opacity: .9;
@@ -30,8 +30,8 @@
     #hide{
       display: none;
     }
-    .content{height: 100%}
-    .card{margin-top: auto}
+    .content{height: 100% }
+    .card{margin-top: auto; height: 180px;}
     .swiper-wrapper{margin-top: auto; height: auto; margin-bottom: auto;}
     .title{font-size: medium;}
     }
